recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:6: error: type mismatch;
 found   : Int
 required: List[Int]
		return occurences(l.head,v);
                                    ^